WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
120419
[GTK] accessibility/menu-list-sends-change-notification.html has incorrect expected results
https://bugs.webkit.org/show_bug.cgi?id=120419
Summary
[GTK] accessibility/menu-list-sends-change-notification.html has incorrect ex...
Denis Nomiyama (dnomi)
Reported
2013-08-28 07:44:06 PDT
accessibility/menu-list-sends-change-notification.html has incorrect expected results. This layout test was mistakenly mentioned at
bug 70606
because this test actually requires the implementation of AccessibilityUIElement::addNotificationListener(), which was done at
bug 119883
.
Attachments
Patch
(3.30 KB, patch)
2013-08-28 07:54 PDT
,
Denis Nomiyama (dnomi)
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Denis Nomiyama (dnomi)
Comment 1
2013-08-28 07:54:59 PDT
Created
attachment 209887
[details]
Patch
WebKit Commit Bot
Comment 2
2013-08-28 15:34:12 PDT
Comment on
attachment 209887
[details]
Patch Clearing flags on attachment: 209887 Committed
r154781
: <
http://trac.webkit.org/changeset/154781
>
WebKit Commit Bot
Comment 3
2013-08-28 15:34:14 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug