[GTK] accessibility/menu-list-sends-change-notification.html has incorrect expected results https://bugs.webkit.org/show_bug.cgi?id=120419

Patch by Denis Nomiyama <d.nomiyama@samsung.com> on 2013-08-28
Reviewed by Chris Fleizach.

Tools:

Added a notification for AXFocusedUIElementChanged.

* DumpRenderTree/atk/AccessibilityCallbacksAtk.cpp:
(axObjectEventListener): Added a notification for AXFocusedUIElementChanged.

LayoutTests:

Updated the expected results according to the fix added to AccessibilityCallbacksAtk.cpp
where a notification was added for AXFocusedUIElementChanged.

* platform/gtk/accessibility/menu-list-sends-change-notification-expected.txt:

Canonical link: https://commits.webkit.org/138415@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@154781 268f45cc-cd09-0410-ab3c-d52691b4dbfc